More image sizing fixes, remove lazyload component from land-grid, remove extra scrollbar from photo-container.

--- a/src/sass/component-styles/2-photo/_photo-container.styles.scss
+++ b/src/sass/component-styles/2-photo/_photo-container.styles.scss
@@ -6,7 +6,7 @@
   background-color: $color-white-2;
   z-index: 2;
   overflow: hidden;
-  overflow-x: scroll;
+  // overflow-x: scroll;
   
   @include respond(tab-port) {
     width: 100vw !important;
