--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -410,7 +410,6 @@ input {
   background-color: #fafafa;
   z-index: 2;
   overflow: hidden;
-  overflow-x: scroll;
 }
 
 @media only screen and (max-width: 62.5em) {
